# frui

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/frui_core/: Cargo.toml
crates/frui_core/src/: lib.rs
crates/frui_core/src/api/: any_ext.rs  events.rs  impls.rs  local_key.rs  mod.rs  widget_ptr.rs
crates/frui_core/src/api/contexts/: build_ctx.rs  mod.rs  render_ctx.rs
crates/frui_core/src/api/contexts/build_ctx/: mod.rs  widget_state.rs
crates/frui_core/src/api/contexts/build_cx/: mod.rs  widget_state.rs
crates/frui_core/src/api/contexts/render/: ext.rs  mod.rs  paint_ctx.rs  paint_cx.rs  parent_data.rs  render_ctx.rs  render_cx.rs
crates/frui_core/src/api/contexts/render/types/: constraints.rs  geometry.rs  mod.rs  offset.rs  size.rs
crates/frui_core/src/api/contexts/render_ctx/: ext.rs  mod.rs  paint_ctx.rs  parent_data.rs  render_state.rs  types.rs
crates/frui_core/src/api/contexts/render_ctx/common/: constraints.rs  mod.rs  offset.rs  size.rs
crates/frui_core/src/api/contexts/render_ctx/types/: offset.rs
crates/frui_core/src/api/implementers/: inherited.rs  leaf.rs  mod.rs  multi.rs  render.rs  single.rs  view.rs
crates/frui_core/src/api/implementors/: inherited.rs  leaf.rs  mod.rs  multi.rs  single.rs  view.rs
crates/frui_core/src/api/pointer_events/: context.rs  events.rs  mod.rs  pointer_listener.rs  pointer_region.rs
crates/frui_core/src/api/structural_eq/: mod.rs  structural_eq.rs
crates/frui_core/src/api/widget_eq/: cheap_eq.rs  mod.rs
crates/frui_core/src/app/: mod.rs  tree.rs
crates/frui_core/src/app/listeners/: keyboard.rs
crates/frui_core/src/app/runner/: handler.rs  mod.rs  window_handler.rs
crates/frui_core/src/app/runner/miri/: mod.rs  substitutes.rs
crates/frui_core/src/app/runner/native/: mod.rs
crates/frui_core/src/app/tree/: mod.rs  pointer_handler.rs
crates/frui_macros/: Cargo.toml
crates/frui_macros/src/: lib.rs  macros.rs
crates/frui_macros/src/macros/: builder.rs  copy_trait_as.rs  impl_tuple_slice.rs  sealed.rs  widget.rs
crates/frui_macros/src/macros/widget_impl/: RawWidget.rs  StructuralEq.rs  WidgetDerive.rs  mod.rs
crates/frui_widgets/: Cargo.toml
crates/frui_widgets/src/: basic.rs  boxes.rs  container.rs  lib.rs  scroll.rs  testing.rs  text.rs  transform.rs  widget_list.rs
crates/frui_widgets/src/event_detectors/: keyboard.rs
crates/frui_widgets/src/flex/: alignment.rs  center.rs  column.rs  flex.rs  mod.rs  row.rs  stack.rs
crates/frui_widgets/src/painting/: border_radius.rs  borders.rs  box_border.rs  decoration.rs  edge_insets.rs  mod.rs  shadow.rs
examples/: boxes.rs  button.rs  column.rs  counter.rs  crab_counter.rs  decoration.rs  flex.rs  inherited_widget.rs  local_key.rs  pointer_events.rs  preserve_state.rs  row.rs  stack.rs  switch_widgets.rs  transform.rs
examples/misc/: button.rs  children_combinations.rs  flex_children.rs  mod.rs  random_state.rs  switch.rs
src/: lib.rs
