[package]
name = "frui_widgets"
version = "0.0.1"
license = "MIT OR Apache-2.0"
authors = ["iglak <iglak.me@gmail.com>"]
description = "Essential widgets for Frui UI framework"
repository = "https://github.com/fruiframework/frui"
edition = "2021"


[dependencies]
frui = { path = "../frui_core", package = "frui_core", version = "0.0.1" }
frui_macros = { path = "../frui_macros", package = "frui_macros", version = "0.0.1" }

log = "0.4.17"
druid-shell = { git = "https://github.com/linebender/druid.git", rev = "ac3815114c65d46fd388431d3013a9412501916b" }

[features]
miri = []
